--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:postgresql://spring-postgresql:5432/testdb
+spring.datasource.url= jdbc:postgresql://postgresql:5432/testdb
 spring.datasource.username= postgres
 spring.datasource.password= postgres
 
