--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url= jdbc:postgresql://postgresql:5432/testdb
 spring.datasource.username= postgres
 spring.datasource.password= postgres
+spring.datasource.hikari.maximum-pool-size=50
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
